--- a/paper/references.bib
+++ b/paper/references.bib
@@ -265,68 +265,91 @@
   doi       = {10.3368/jhr.XLII.2.453}
 }
 
-@incollection{blau2006preschool,
-  author    = {Blau, David M. and Currie, Janet},
-  title     = {Pre-school, day care, and after-school care: Who's minding the kids?},
-  booktitle = {Handbook of the Economics of Education},
-  year      = {2006},
-  editor    = {Eric A. Hanushek and Finis Welch},
-  publisher = {Elsevier},
-  volume    = {2},
-  pages     = {1163--1278},
-  doi       = {10.1016/S1574-0692(06)02020-4}
+
+@article{hansmann1980role,
+  title={The role of nonprofit enterprise},
+  author={Hansmann, Henry},
+  journal={Yale Law Journal},
+  volume={89},
+  number={5},
+  pages={835--901},
+  year={1980}
 }
 
-@book{cleveland2003benefits,
-  author    = {Cleveland, Gordon and Krashinsky, Michael},
-  title     = {The Benefits and Costs of Good Child Care},
-  year      = {2003},
-  publisher = {University of Toronto Press},
-  address   = {Toronto, Canada},
-  isbn      = {9780802082768}
+@book{salamon1995partners,
+  title={Partners in public service: Government-nonprofit relations in the modern welfare state},
+  author={Salamon, Lester M.},
+  publisher={Johns Hopkins University Press},
+  year={1995}
 }
 
-@article{fuller1996family,
-  author    = {Fuller, Bruce and Holloway, Susan D. and Liang, Xiaoyan},
-  title     = {Family Selection of Child Care Centers: The Influence of Household Support, Ethnicity, and Parental Practices},
-  journal   = {Child Development},
-  volume    = {67},
-  number    = {6},
-  pages     = {3320--3337},
-  year      = {1996},
-  doi       = {10.2307/1131789}
+@book{bennett2011working,
+  title={Working for inclusion: How early childhood education and care and its workforce can help Europe’s social and economic policies},
+  author={Bennett, John and Moss, Peter},
+  publisher={University of Edinburgh},
+  year={2011}
 }
 
-@article{larsen2015accessibility,
-  author    = {Larsen, John and El-Geneidy, Ahmed and Yasmin, Farzana},
-  title     = {The Accessibility of Child Care Services: An Analysis of Toronto},
-  journal   = {Journal of Transport Geography},
-  volume    = {48},
-  pages     = {41--49},
-  year      = {2015},
-  doi       = {10.1016/j.jtrangeo.2015.08.005}
+@book{kaga2010caring,
+  title={Caring and learning together: A cross-national study on the integration of early childhood care and education within education},
+  author={Kaga, Yoshie and Bennett, John and Moss, Peter},
+  publisher={UNESCO},
+  year={2010}
 }
 
-@article{morrissey2010childcare,
-  author    = {Morrissey, Taryn W.},
-  title     = {Child Care and Child Development: What We Know and Why We Need to Know More},
-  journal   = {Child Development Perspectives},
-  volume    = {4},
-  number    = {2},
-  pages     = {87--92},
-  year      = {2010},
-  doi       = {10.1111/j.1750-8606.2010.00123.x}
+@book{weisbrod1998profit,
+  title={To profit or not to profit: The commercial transformation of the nonprofit sector},
+  author={Weisbrod, Burton A.},
+  publisher={Cambridge University Press},
+  year={1998}
 }
 
-@article{tekin2007childcare,
-  author    = {Tekin, Erdal},
-  title     = {Child Care Subsidies, Wages, and Employment of Single Mothers},
-  journal   = {Journal of Human Resources},
-  volume    = {42},
-  number    = {2},
-  pages     = {453--487},
-  year      = {2007},
-  doi       = {10.3368/jhr.XLII.2.453}
+@book{penn2011quality,
+  title={Quality in early childhood services: An international perspective},
+  author={Penn, Helen},
+  publisher={McGraw-Hill Education},
+  year={2011}
 }
 
+@book{lloyd2012childcare,
+  title={Childcare markets: Can they deliver an equitable service?},
+  author={Lloyd, Eva and Penn, Helen},
+  publisher={Policy Press},
+  year={2012}
+}
+
+@book{harrell2015regression,
+  title={Regression modeling strategies: With applications to linear models, logistic and ordinal regression, and survival analysis},
+  author={Harrell, Frank E.},
+  publisher={Springer},
+  year={2015}
+}
+
+@book{burnham2004model,
+  title={Model selection and multimodel inference: A practical information-theoretic approach},
+  author={Burnham, Kenneth P. and Anderson, David R.},
+  publisher={Springer},
+  year={2004}
+}
+
+@book{menard2002applied,
+  title={Applied logistic regression analysis},
+  author={Menard, Scott},
+  publisher={SAGE Publications},
+  year={2002}
+}
+
+@book{hosmer2013applied,
+  title={Applied logistic regression},
+  author={Hosmer, David W. and Lemeshow, Stanley and Sturdivant, Rodney X.},
+  publisher={Wiley},
+  year={2013}
+}
+
+@book{singer2003applied,
+  title={Applied longitudinal data analysis: Modeling change and event occurrence},
+  author={Singer, Judith D. and Willett, John B.},
+  publisher={Oxford University Press},
+  year={2003}
+}
 
