--- a/paper/references.bib
+++ b/paper/references.bib
@@ -27,7 +27,7 @@
   
 
 @Manual{citereadr,
-    title = {readr: Read Rectangular Text Data},
+    title = {{readr}: Read Rectangular Text Data},
     author = {Hadley Wickham and Jim Hester and Jennifer Bryan},
     year = {2024},
     note = {R package version 2.1.5},
@@ -47,7 +47,7 @@
 
 
 @Manual{citedplyr,
-    title = {dplyr: A Grammar of Data Manipulation},
+    title = {{dplyr}: A Grammar of Data Manipulation},
     author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller and Davis Vaughan},
     year = {2023},
     note = {R package version 1.1.4},
@@ -56,7 +56,7 @@
 
 @Book{citeggplot2,
     author = {Hadley Wickham},
-    title = {ggplot2: Elegant Graphics for Data Analysis},
+    title = {{ggplot2}: Elegant Graphics for Data Analysis},
     publisher = {Springer-Verlag New York},
     year = {2016},
     isbn = {978-3-319-24277-4},
@@ -87,7 +87,7 @@
   }
   
 @Manual{citestagazer,
-    title = {stargazer: Well-Formatted Regression and Summary Statistics Tables},
+    title = {{stargazer}: Well-Formatted Regression and Summary Statistics Tables},
     author = {Marek Hlavac},
     year = {2022},
     note = {R package version 5.2.3},
@@ -97,7 +97,7 @@
   }
   
 @Manual{citeknitr,
-  title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
+  title = {{knitr}: A General-Purpose Package for Dynamic Report Generation in R},
   author = {Yihui Xie},
   year = {2021},
   url = {https://yihui.org/knitr/},
