--- a/paper/references.bib
+++ b/paper/references.bib
@@ -17,6 +17,14 @@
     url = {https://CRAN.R-project.org/package=opendatatoronto},
   }
   
+  @misc{toronto2024licensed,
+  author       = {City of Toronto},
+  title        = {Licensed Child Care Centres Dataset},
+  year         = {2024},
+  url          = {https://open.toronto.ca/dataset/licensed-child-care-centres/},
+  note         = {Accessed: [Insert date of access]}
+}
+
   @book{tellingstories,
     title = {Telling Stories with Data},
     author = {Rohan Alexander},
